fix visible-mobile-menu-on-non-mobile-screen-size problem

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -124,6 +124,10 @@ ul {
   display: none;
 }
 
+.enabled-menu-element {
+  display: none;
+}
+
 @media only screen and (max-width: 768px) {
   .desktop-menu {
     display: none;
@@ -134,6 +138,14 @@ ul {
   }
 
   #mobile-menu-toggler {
+    display: block;
+  }
+
+  .mobile-menu {
+    display: none;
+  }
+
+  .enabled-menu-element {
     display: block;
   }
 }
